# potion-prototype

./: .gitignore  AGENTS.md  Makefile  README-pt-br.md  README.md  exemplo.py  potion_codegen.py  potion_parser.py  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.pt-br.md  CONTRIBUTING.en.md  CONTRIBUTING.pt-br.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.en.md  (+1 more)
cli/: module_loader.py  parse_potion_file.py  potionc.py
codegen/: potion_codegen.py
demo/: README.md  demo_support.erl  feature_manager.potion  http_router.potion  http_server.potion  main.potion
docs/: architecture.md  language-spec.md  language-spec.pt-br.md
examples/: 016_pattern_matching.potion  01_values_and_functions.potion  02_var_and_none.potion  03_conditionals_and_comparisons.potion  04_maps_and_match.potion  05_spawn_send_receive.potion  06_end_to_end_features.potion  07_var_reassignment.potion  08_var_reassignment_control_flow.potion  09_type_error_string_plus_int.potion  10_typed_function_params.potion  11_typed_params_with_match.potion  12_type_error_typed_function_call.potion  13_modules_and_imports_main.potion  14_erlang_module_interop.potion  15_erlang_httpc_interop.potion  16_atoms.potion  17_tuples.potion  README.md  module_helpers.potion
lexer/: potion_lexer.py
packaging/: packaging-potion-deb.sh  packaging-potion-rpm.sh
parser/: potion_parser.py
semantic/: __init__.py  potion_semantic.py
tests/: test_codegen.py  test_integration.py  test_lexer.py  test_module_loader.py  test_parser.py  test_semantic.py  test_type_checker.py
(+21 files in other folders)
